add slack notifications
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,12 @@ jobs:
           name: Make Images via Buildx
           command: |
             BUILDX_PLATFORMS="$BUILDX_PLATFORMS" make cross-build-dev
+      - slack/notify:
+          event: pass
+          template: basic_success_1
+      - slack/notify:
+          event: fail
+          template: basic_fail_1
   build-master:
     machine:
       image:  ubuntu-2004:202104-01
@@ -61,6 +67,12 @@ jobs:
           name: Make Images via Buildx
           command: |
             BUILDX_PLATFORMS="$BUILDX_PLATFORMS" make cross-build-latest
+      - slack/notify:
+          event: pass
+          template: basic_success_1
+      - slack/notify:
+          event: fail
+          template: basic_fail_1
   build-tags:
     machine:
       image:  ubuntu-2004:202104-01
@@ -90,6 +102,12 @@ jobs:
           name: Make Images via Buildx
           command: |
             BUILDX_PLATFORMS="$BUILDX_PLATFORMS" TAG="$CIRCLE_TAG" make cross-build
+      - slack/notify:
+          event: pass
+          template: basic_success_1
+      - slack/notify:
+          event: fail
+          template: basic_fail_1
 workflows:
   version: 2
   build-branch-dev:
