--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,23 @@ jobs:
       DOCKER_BUILDKIT: 1
       BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
     steps:
+      - slack/notify:
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "plain_text",
+                      "text": "*BUILD* Triggered by: $CIRCLE_USERNAME for $CIRCLE_PROJECT_REPONAME on $CIRCLE_BRANCH" 
+                      "emoji": true
+                    }
+                  ]
+                }
+              ]
+            }
+          event: always
       - checkout
       - run:
           name: Log in to docker hub
@@ -45,6 +62,23 @@ jobs:
       DOCKER_BUILDKIT: 1
       BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
     steps:
+      - slack/notify:
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "plain_text",
+                      "text": "*BUILD* Triggered by: $CIRCLE_USERNAME for $CIRCLE_PROJECT_REPONAME on $CIRCLE_BRANCH" 
+                      "emoji": true
+                    }
+                  ]
+                }
+              ]
+            }
+          event: always
       - checkout
       - run:
           name: Log in to docker hub
@@ -80,6 +114,23 @@ jobs:
       DOCKER_BUILDKIT: 1
       BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
     steps:
+      - slack/notify:
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "plain_text",
+                      "text": "*BUILD* Triggered by: $CIRCLE_USERNAME for $CIRCLE_PROJECT_REPONAME on $CIRCLE_BRANCH" 
+                      "emoji": true
+                    }
+                  ]
+                }
+              ]
+            }
+          event: always
       - checkout
       - run:
           name: Log in to docker hub
