--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "New Build Started! :thumbs_up:",
-                    "emoji": "true"
+                    "text": "New Build Started! :thumbs_up:"
                   },
                   "type": "section",
                   "fields": [
@@ -88,8 +87,7 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "New Build Started! :thumbs_up:",
-                    "emoji": "true"
+                    "text": "New Build Started! :thumbs_up:"
                   },
                   "type": "section",
                   "fields": [
@@ -158,8 +156,7 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "New Build Started! :thumbs_up:",
-                    "emoji": "true"
+                    "text": "New Build Started! :thumbs_up:"
                   },
                   "type": "section",
                   "fields": [
