--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,10 @@ version: 2.1
 orbs:
   slack: circleci/slack@4.4.2
 jobs:
-  build-dev:
+  build-x86:
     machine:
-      image:  ubuntu-2004:202104-01
-      #docker_layer_caching: true   # this is a paid-for account feature :(
-    environment:
-      DOCKER_BUILDKIT: 1
-      BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
+      image: ubuntu-2004:202201-02
+    resource_class: medium
     steps:
       - slack/notify:
           custom: |
@@ -19,7 +16,7 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "New Build Started!"
+                    "text": "New Build Started - x86_64 image"
                   },
                   "type": "section",
                   "fields": [
@@ -42,38 +39,24 @@ jobs:
           event: always
       - checkout
       - run:
-          name: Log in to docker hub
+          name: Log in to github container repo (ghcr.io)
           command: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run:
-          name: Install buildx
+            docker login ghcr.io -u iammrcupp -p $GITHUB_TOKEN
+      - deploy:
+          name: "Build and upload x86_64 image"
           command: |
-            BUILDX_BINARY_URL="https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.linux-amd64"
-            curl --output docker-buildx \
-              --silent --show-error --location --fail --retry 3 \
-              "$BUILDX_BINARY_URL"
-            mkdir -p ~/.docker/cli-plugins
-            mv docker-buildx ~/.docker/cli-plugins/
-            chmod a+x ~/.docker/cli-plugins/docker-buildx
-            docker buildx install
-            # Run binfmt
-            docker run --rm --privileged tonistiigi/binfmt:latest --install "$BUILDX_PLATFORMS"
-      - run:
-          name: Make Images via Buildx
-          command: |
-            BUILDX_PLATFORMS="$BUILDX_PLATFORMS" make cross-build-dev
+            docker build -t ghcr.io/iammrcupp/${CIRCLE_PROJECT_REPONAME}:x86_64-${CIRCLE_SHA1} .
+            docker push ghcr.io/iammrcupp/${CIRCLE_PROJECT_REPONAME}:x86_64-${CIRCLE_SHA1}
       - slack/notify:
           event: pass
           template: basic_success_1
       - slack/notify:
           event: fail
           template: basic_fail_1
-  build-master:
+  build-arm64:
     machine:
-      image:  ubuntu-2004:202104-01
-    environment:
-      DOCKER_BUILDKIT: 1
-      BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
+      image: ubuntu-2004:202201-02
+    resource_class: arm.medium
     steps:
       - slack/notify:
           custom: |
@@ -83,7 +66,7 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "New Build Started!"
+                    "text": "New Build Started - arm64 image"
                   },
                   "type": "section",
                   "fields": [
@@ -106,38 +89,24 @@ jobs:
           event: always
       - checkout
       - run:
-          name: Log in to docker hub
+          name: Log in to github container repo (ghcr.io)
           command: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run:
-          name: Install buildx
+            docker login ghcr.io -u iammrcupp -p $GITHUB_TOKEN
+      - deploy:
+          name: "Build and upload arm64 image"
           command: |
-            BUILDX_BINARY_URL="https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.linux-amd64"
-            curl --output docker-buildx \
-              --silent --show-error --location --fail --retry 3 \
-              "$BUILDX_BINARY_URL"
-            mkdir -p ~/.docker/cli-plugins
-            mv docker-buildx ~/.docker/cli-plugins/
-            chmod a+x ~/.docker/cli-plugins/docker-buildx
-            docker buildx install
-            # Run binfmt
-            docker run --rm --privileged tonistiigi/binfmt:latest --install "$BUILDX_PLATFORMS"
-      - run:
-          name: Make Images via Buildx
-          command: |
-            BUILDX_PLATFORMS="$BUILDX_PLATFORMS" make cross-build-latest
+            docker build -t ghcr.io/iammrcupp/${CIRCLE_PROJECT_REPONAME}:arm64-${CIRCLE_SHA1} .
+            docker push ghcr.io/iammrcupp/${CIRCLE_PROJECT_REPONAME}:arm64-${CIRCLE_SHA1}
       - slack/notify:
           event: pass
           template: basic_success_1
       - slack/notify:
           event: fail
           template: basic_fail_1
-  build-tags:
+  upload-manifest:
     machine:
-      image:  ubuntu-2004:202104-01
-    environment:
-      DOCKER_BUILDKIT: 1
-      BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
+      image: ubuntu-2004:202201-02
+    resource_class: medium
     steps:
       - slack/notify:
           custom: |
@@ -147,7 +116,7 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "New Build Started!"
+                    "text": "New Build Started - multiarch image creation"
                   },
                   "type": "section",
                   "fields": [
@@ -170,26 +139,16 @@ jobs:
           event: always
       - checkout
       - run:
-          name: Log in to docker hub
+          name: Log in to github container repo (ghcr.io)
           command: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run:
-          name: Install buildx
+            docker login ghcr.io -u iammrcupp -p $GITHUB_TOKEN
+      - deploy:
+          name: "Build and upload multiarch manifest for image"
           command: |
-            BUILDX_BINARY_URL="https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.linux-amd64"
-            curl --output docker-buildx \
-              --silent --show-error --location --fail --retry 3 \
-              "$BUILDX_BINARY_URL"
-            mkdir -p ~/.docker/cli-plugins
-            mv docker-buildx ~/.docker/cli-plugins/
-            chmod a+x ~/.docker/cli-plugins/docker-buildx
-            docker buildx install
-            # Run binfmt
-            docker run --rm --privileged tonistiigi/binfmt:latest --install "$BUILDX_PLATFORMS"
-      - run:
-          name: Make Images via Buildx
-          command: |
-            BUILDX_PLATFORMS="$BUILDX_PLATFORMS" TAG="$CIRCLE_TAG" make cross-build
+            set -eu
+            export DOCKER_CLI_EXPERIMENTAL=enabled
+            docker manifest create ghcr.io/iammrcupp/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1} ghcr.io/iammrcupp/${CIRCLE_PROJECT_REPONAME}:x86_64-${CIRCLE_SHA1} ghcr.io/iammrcupp/${CIRCLE_PROJECT_REPONAME}:arm64-${CIRCLE_SHA1}
+            docker manifest push ghcr.io/iammrcupp/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}
       - slack/notify:
           event: pass
           template: basic_success_1
@@ -198,36 +157,23 @@ jobs:
           template: basic_fail_1
 workflows:
   version: 2
-  build-branch-dev:
+  build:
     jobs:
-      - build-dev:
+      - build-arm64:
           context:
             - docker-env
             - slack
-          filters:
-            branches:
-              only: 
-                - dev
-  build-branch-master:
-    jobs:
-      - build-master:
+            - github
+      - build-x86:
           context:
             - docker-env
             - slack
-          filters:
-            branches:
-              only: 
-                - master
-  build-branch-tags:
-    jobs:
-      - build-tags:
+            - github
+      - upload-manifest:
           context:
             - docker-env
             - slack
-          filters:
-            tags:
-              only: 
-                - /^v.*/
-            branches:
-              ignore:
-                - /.*/
+            - github
+          requires:
+            - build-arm64
+            - build-x86
